@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2003/07/17 21:24:51 grant Exp $
+# $NetBSD: Makefile,v 1.6 2004/01/28 12:33:58 xtraeme Exp $
 #
 
 DISTNAME=	electric-6.05
+PKGREVISION=	1
 CATEGORIES=	cad
 MASTER_SITES=	${MASTER_SITE_GNU:=electric/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	http://www.gnu.org/software/electric/electric.html
 COMMENT=	Electrical CAD system
 
 USE_BUILDLINK2=		YES
-USE_X11BASE=		YES
+USE_X11=		YES
 GNU_CONFIGURE=		YES
 
 post-patch:
